<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_lg">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_revert"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@null" />

            <TextView
                android:id="@+id/tvRideX"
                style="@style/TextAppearance.RideX.TitleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_md"
                android:text="@string/app_name"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@id/btnBack"
                app:layout_constraintStart_toEndOf="@id/btnBack"
                app:layout_constraintTop_toTopOf="@id/btnBack" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardSignUp"
                style="@style/Widget.RideX.Card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@id/btnBack">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/spacing_lg">

                    <TextView
                        android:id="@+id/tvTitle"
                        style="@style/TextAppearance.RideX.HeadlineLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_account_title"
                        android:textColor="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvSubtitle"
                        style="@style/TextAppearance.RideX.BodyMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_sm"
                        android:text="@string/create_account_subtitle"
                        android:textColor="@color/on_surface_variant"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

                    <EditText
                        android:id="@+id/etFullName"
                        style="@style/TextAppearance.RideX.BodyLarge"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_marginTop="32dp"
                        android:background="@drawable/bg_input_field"
                        android:hint="@string/full_name_hint"
                        android:inputType="textPersonName"
                        android:autofillHints="name"
                        android:paddingHorizontal="@dimen/spacing_md"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toBottomOf="@id/tvSubtitle" />

                    <EditText
                        android:id="@+id/etEmail"
                        style="@style/TextAppearance.RideX.BodyLarge"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_marginTop="@dimen/spacing_md"
                        android:background="@drawable/bg_input_field"
                        android:hint="@string/email_hint"
                        android:inputType="textEmailAddress"
                        android:autofillHints="emailAddress"
                        android:paddingHorizontal="@dimen/spacing_md"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toBottomOf="@id/etFullName" />

                    <EditText
                        android:id="@+id/etPhone"
                        style="@style/TextAppearance.RideX.BodyLarge"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_marginTop="@dimen/spacing_md"
                        android:background="@drawable/bg_input_field"
                        android:hint="@string/phone_number_hint"
                        android:inputType="phone"
                        android:autofillHints="phone"
                        android:paddingHorizontal="@dimen/spacing_md"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toBottomOf="@id/etEmail" />

                    <EditText
                        android:id="@+id/etPassword"
                        style="@style/TextAppearance.RideX.BodyLarge"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_marginTop="@dimen/spacing_md"
                        android:background="@drawable/bg_input_field"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword"
                        android:autofillHints="password"
                        android:paddingHorizontal="@dimen/spacing_md"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toBottomOf="@id/etPhone" />

                    <EditText
                        android:id="@+id/etConfirmPassword"
                        style="@style/TextAppearance.RideX.BodyLarge"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_marginTop="@dimen/spacing_md"
                        android:background="@drawable/bg_input_field"
                        android:hint="@string/confirm_password_hint"
                        android:inputType="textPassword"
                        android:autofillHints="password"
                        android:paddingHorizontal="@dimen/spacing_md"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toBottomOf="@id/etPassword" />

                    <Button
                        android:id="@+id/btnCreateAccount"
                        style="@style/Widget.RideX.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:backgroundTint="@color/black"
                        android:text="@string/create_account"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        app:layout_constraintTop_toBottomOf="@id/etConfirmPassword" />

                    <TextView
                        android:id="@+id/tvLogin"
                        style="@style/TextAppearance.RideX.BodyMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_xl"
                        android:textColor="@color/on_surface_variant"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/btnCreateAccount"
                        tools:text="Already have an account? Log in" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>